[gd_scene load_steps=4 format=3 uid="uid://xmd6g28wkw32"]

[ext_resource type="FontFile" uid="uid://bc71i85vq6yh4" path="res://fonts/Xolonium-Regular.ttf" id="1_iktlc"]
[ext_resource type="Script" path="res://Scripts/Score Manager.gd" id="1_rndmf"]

[sub_resource type="LabelSettings" id="LabelSettings_7jig3"]
font = ExtResource("1_iktlc")
font_size = 60

[node name="UI Manager" type="CanvasLayer"]
script = ExtResource("1_rndmf")

[node name="Score Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_iktlc")
theme_override_font_sizes/font_size = 45
text = "0"

[node name="Score Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Restart Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.0
offset_top = -288.0
offset_right = 82.0
offset_bottom = -238.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_iktlc")
theme_override_font_sizes/font_size = 30
text = "RESTART"

[node name="Quit Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.0
offset_top = -198.0
offset_right = 82.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_iktlc")
theme_override_font_sizes/font_size = 30
text = "QUIT"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -105.0
offset_right = 203.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("1_iktlc")
theme_override_font_sizes/font_size = 60
text = "GAME OVER"
label_settings = SubResource("LabelSettings_7jig3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Countdown Timer" type="Timer" parent="."]

[connection signal="timeout" from="Score Timer" to="." method="_on_score_timer_timeout"]
[connection signal="pressed" from="Restart Button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Quit Button" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="Countdown Timer" to="." method="_on_countdown_timer_timeout"]
